Fix icons being cut off, l10n

--- a/src/ui/src/app/widgets/table/table.component.scss
+++ b/src/ui/src/app/widgets/table/table.component.scss
@@ -77,6 +77,12 @@
         &-count {
             flex: 0 0 10%;
         }
+
+        &-download,
+        &-upload,
+        &-ping {
+            flex-wrap: wrap;
+        }
     }
 
     &--wide {
